Fix studio register spacing

--- a/stylesheets/studio.less
+++ b/stylesheets/studio.less
@@ -65,7 +65,7 @@
 					input{
 						.secondary-font;
 
-						margin: 10px 0;
+						margin-top: 10px;
 						width: 100%;
 						padding: 10px;
 						text-align: center;
